syntax = "proto3";
package jpyx.auction;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/lcnem/jpyx/x/auction/types";

message BaseAuction {
  uint64 id = 1 [(gogoproto.moretags) = "yaml:\"id\""];
  string initiator = 2 [(gogoproto.moretags) = "yaml:\"id\""];
  cosmos.base.v1beta1.Coin lot = 3 [(gogoproto.moretags) = "yaml:\"lot\""];
  string bidder = 4 [(gogoproto.moretags) = "yaml:\"bidder\""];
  cosmos.base.v1beta1.Coin bid = 5 [(gogoproto.moretags) = "yaml:\"bid\""];
  bool has_received_bids = 6 [(gogoproto.moretags) = "yaml:\"has_reeceived_bids\""];
  google.protobuf.Timestamp end_time = 7 [
    (gogoproto.moretags) = "yaml:\"end_time\"",
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true
  ];
  google.protobuf.Timestamp max_end_time = 8 [
    (gogoproto.moretags) = "yaml:\"max_end_time\"",
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true
  ];
}

message SurplusAuction {
  BaseAuction base_auction = 1 [(gogoproto.moretags) = "yaml:\"base_auction\""];
}

message DebtAuction {
  BaseAuction base_auction = 1 [(gogoproto.moretags) = "yaml:\"base_auction\""];
  cosmos.base.v1beta1.Coin corresponding_debt = 2 [(gogoproto.moretags) = "yaml:\"corresponding_debt\""];
}

message CollateralAuction {
  BaseAuction base_auction = 1 [(gogoproto.moretags) = "yaml:\"base_auction\""];
  cosmos.base.v1beta1.Coin corresponding_debt = 2 [(gogoproto.moretags) = "yaml:\"corresponding_debt\""];
  cosmos.base.v1beta1.Coin max_bid = 3 [(gogoproto.moretags) = "yaml:\"max_bid\""];
  WeightedAddresses lot_returns = 4 [(gogoproto.moretags) = "yaml:\"lot_returns\""];
}

message WeightedAddresses {
  repeated string addresses = 1 [(gogoproto.moretags) = "yaml:\"addresses\""];
  repeated string weights = 2 [
    (gogoproto.moretags) = "yaml:\"weights\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
}

message MsgPlaceBid {
  uint64 auction_id = 1 [(gogoproto.moretags) = "yaml:\"auction_id\""];
  string bidder = 2 [(gogoproto.moretags) = "yaml:\"bidder\""];
  cosmos.base.v1beta1.Coin amount = 3 [(gogoproto.moretags) = "yaml:\"amount\""];
}

message Params {
  option (gogoproto.goproto_stringer) = false;
  
}
